// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CostUsageReports Construct Testing CostUsageReport Construct Normal(all arguments) Testing Should match snapshot: report-timezone 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DailyCostUsageReporterCostReporterFunction100AA295": Object {
      "DependsOn": Array [
        "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "HASH.zip",
        },
        "Description": "A function to archive logs s3 bucket from CloudWatch Logs.",
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "SLACK_CHANNEL": "example-channel",
            "SLACK_TOKEN": "xoxb-11111111111-XXXXXXXXXXXXX-XXXXXXXXXXXXXXXXXXXXXXXX",
          },
        },
        "FunctionName": "cost-report-d83e5229-func",
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "ce:GetCostAndUsage",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "get-cost-usage",
          },
        ],
        "RoleName": "cost-report-lambda-exec-d83e5229-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "DailyCostUsageReporterSchedule211E3EDE": Object {
      "Properties": Object {
        "Description": "aws account 123456789012 const reports.",
        "FlexibleTimeWindow": Object {
          "Mode": "OFF",
        },
        "Name": "daily-cost-report-123456789012-schedule",
        "ScheduleExpression": "cron(1 9 * * ? *)",
        "ScheduleExpressionTimezone": "Asia/Tokyo",
        "State": "ENABLED",
        "Target": Object {
          "Arn": Object {
            "Fn::GetAtt": Array [
              "DailyCostUsageReporterCostReporterFunction100AA295",
              "Arn",
            ],
          },
          "Input": "{"Type":"Services"}",
          "RetryPolicy": Object {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": Object {
            "Fn::GetAtt": Array [
              "DailyCostUsageReporterSchedulerExecutionRole8D20F239",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "DailyCostUsageReporterSchedulerExecutionRole8D20F239": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "lambda:InvokeFunction",
                  "Effect": "Allow",
                  "Resource": Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "DailyCostUsageReporterCostReporterFunction100AA295",
                        "Arn",
                      ],
                    },
                    Object {
                      "Fn::Join": Array [
                        "",
                        Array [
                          Object {
                            "Fn::GetAtt": Array [
                              "DailyCostUsageReporterCostReporterFunction100AA295",
                              "Arn",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "lambda-invoke-policy",
          },
        ],
        "RoleName": "daily-cost-report-schedule-d83e5229-exec-role",
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`CostUsageReports Construct Testing CostUsageReport Construct Normal(only required arguments) Testing Should match snapshot: report 1`] = `
Object {
  "Parameters": Object {
    "BootstrapVersion": Object {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": Object {
    "DailyCostUsageReporterCostReporterFunction100AA295": Object {
      "DependsOn": Array [
        "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "HASH.zip",
        },
        "Description": "A function to archive logs s3 bucket from CloudWatch Logs.",
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "SLACK_CHANNEL": "example-channel",
            "SLACK_TOKEN": "xoxb-11111111111-XXXXXXXXXXXXX-XXXXXXXXXXXXXXXXXXXXXXXX",
          },
        },
        "FunctionName": "cost-report-d83e5229-func",
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "ce:GetCostAndUsage",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "get-cost-usage",
          },
        ],
        "RoleName": "cost-report-lambda-exec-d83e5229-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "DailyCostUsageReporterSchedule211E3EDE": Object {
      "Properties": Object {
        "Description": "aws account 123456789012 const reports.",
        "FlexibleTimeWindow": Object {
          "Mode": "OFF",
        },
        "Name": "daily-cost-report-123456789012-schedule",
        "ScheduleExpression": "cron(1 9 * * ? *)",
        "ScheduleExpressionTimezone": "UTC",
        "State": "ENABLED",
        "Target": Object {
          "Arn": Object {
            "Fn::GetAtt": Array [
              "DailyCostUsageReporterCostReporterFunction100AA295",
              "Arn",
            ],
          },
          "Input": "{"Type":"Services"}",
          "RetryPolicy": Object {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": Object {
            "Fn::GetAtt": Array [
              "DailyCostUsageReporterSchedulerExecutionRole8D20F239",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "DailyCostUsageReporterSchedulerExecutionRole8D20F239": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": "lambda:InvokeFunction",
                  "Effect": "Allow",
                  "Resource": Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "DailyCostUsageReporterCostReporterFunction100AA295",
                        "Arn",
                      ],
                    },
                    Object {
                      "Fn::Join": Array [
                        "",
                        Array [
                          Object {
                            "Fn::GetAtt": Array [
                              "DailyCostUsageReporterCostReporterFunction100AA295",
                              "Arn",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "lambda-invoke-policy",
          },
        ],
        "RoleName": "daily-cost-report-schedule-d83e5229-exec-role",
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": Object {
    "CheckBootstrapVersion": Object {
      "Assertions": Array [
        Object {
          "Assert": Object {
            "Fn::Not": Array [
              Object {
                "Fn::Contains": Array [
                  Array [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  Object {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
